# ChangeLog for media-sound/twolame
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/twolame/ChangeLog,v 1.38 2009/04/04 20:16:38 solar Exp $

  04 Apr 2009; <solar@gentoo.org> twolame-0.3.12.ebuild:
  - Keyword ~arm

  23 Mar 2008; Raúl Porcel <armin76@gentoo.org> twolame-0.3.12.ebuild:
  alpha/ia64/sparc stable wrt #214281

  23 Mar 2008; nixnut <nixnut@gentoo.org> twolame-0.3.12.ebuild:
  Stable on ppc wrt bug 214281

  23 Mar 2008; Brent Baude <ranger@gentoo.org> twolame-0.3.12.ebuild:
  stable ppc64, bug 214281

  22 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  twolame-0.3.12.ebuild:
  stable x86, bug 214281

  22 Mar 2008; Jeroen Roovers <jer@gentoo.org> twolame-0.3.12.ebuild:
  Stable for HPPA (bug #214281).

  22 Mar 2008; Samuli Suominen <drac@gentoo.org> twolame-0.3.12.ebuild:
  amd64 stable

  19 Jan 2008; Samuli Suominen <drac@gentoo.org> twolame-0.3.12.ebuild:
  Remove forced -O3 optimization from upstream configure, thanks to aballier
  for noticing.

*twolame-0.3.12 (17 Jan 2008)

  17 Jan 2008; Samuli Suominen <drac@gentoo.org> +twolame-0.3.12.ebuild:
  Version bump wrt #206309 which includes a fix to #200047 from upstream.
  Thanks to Ryan Hill and Juan Aguado.

  20 Dec 2007; Alexis Ballier <aballier@gentoo.org> twolame-0.3.10.ebuild:
  Keyword ~x86-fbsd, working fine here, add elibtoolize to get the same .so
  versionning as on linux

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> twolame-0.3.10.ebuild:
  alpha/ia64/sparc stable wrt #198790

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> twolame-0.3.10.ebuild:
  Stable on ppc64; bug #198790

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org> twolame-0.3.10.ebuild:
  Stable on x86 (bug #198790)

  11 Nov 2007; nixnut <nixnut@gentoo.org> twolame-0.3.10.ebuild:
  Stable on ppc wrt bug 198790

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> twolame-0.3.10.ebuild:
  amd64 stable wrt #198790
