@@ -1,4 +1,4 @@
 DIST twolame-0.3.12.tar.gz 483148 RMD160 d5577b36380007ecc701e3afb5b98bc145790085 SHA1 64d621c2967fe8a2fda20f75230a8220fb740090 SHA256 c1bd7e9a16a88a040410ba16701d7aa5cc9f94ee8ed8f2d0a3494ca7dc7d3874
-EBUILD twolame-0.3.12.ebuild 857 RMD160 e644fe95b0e69e5dce7ab55e483e8b6f225c0c69 SHA1 29f8fbe9ee55247e0d82d3f7ea140f614f163cfe SHA256 6eac1b37b6bb8c6b1f7cf004b3bb5e058f9ba630a6c493b5b846233538d48618
-MISC ChangeLog 4353 RMD160 e45fb53b6ab87104c36f689f1b6ca62589e71670 SHA1 2223270445470bf1b88dd5f62038aaded86442e8 SHA256 dfbe3d815d203660a300389aeb332363782d3e95d6bb9bd4c7ef6b37074e43b2
+EBUILD twolame-0.3.12.ebuild 964 RMD160 76353d4d6835cd6e9919879981552089386f164f SHA1 ad9aabd6ff0e73096cbfb0d5cf2e51c95f0653ad SHA256 e513abd45cc1def8240a84e132503825b18b7bd5c9dc4595baa0776b56db90ce
+MISC ChangeLog 4475 RMD160 ee6e07f803e2d05230ff1e12479656bc67468cac SHA1 e841d0a578bff9cd6817b5afcaee001d15e90a08 SHA256 b64139b79d006b08e9552afb74a4e5dd28c3f82e03bdc4f5c018d82ec937f4f8
 MISC metadata.xml 159 RMD160 7de82f3b6f859e6482fc1fff7244c90cec80f394 SHA1 6a32e352e1abdcd2cbcd3cfd956130b94777cdbf SHA256 9bb575bfe4faa90e5e20978ca698d5abebb928ab0b5e4c81ff9ef5778c1284aa
