@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/twolame
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/twolame/ChangeLog,v 1.38 2009/04/04 20:16:38 solar Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/twolame/ChangeLog,v 1.39 2010/08/23 20:24:52 ssuominen Exp $
+
+  23 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> twolame-0.3.12.ebuild:
+  USE="static-libs" and punt .la files.
 
   04 Apr 2009; <solar@gentoo.org> twolame-0.3.12.ebuild:
   - Keyword ~arm
